crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__loop_stmt-5.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
while true:
  continue


# Func:
function <[[main]]>:
  frame_size: 4
  length: 21
  const: <empty>
  code:
     0 | push_true 
     1 | jump_if_false offset=18
     3 | nop 
     4 | nop 
     5 | nop 
     6 | nop 
     7 | jump_back offset=7
     9 | nop 
    10 | nop 
    11 | nop 
    12 | nop 
    13 | jump_back offset=13
    15 | nop 
    16 | nop 
    17 | nop 
    18 | nop 
    19 | ret 
    20 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
