crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__loop_stmt.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
loop:
  print "test"


# Func:
function <[[main]]>:
  frame_size: 4
  length: 11
  const (length=1):
    0: "test"
  code:
     0 | load_const [0]
     2 | print 
     3 | jump_back offset=3
     5 | nop 
     6 | nop 
     7 | nop 
     8 | nop 
     9 | ret 
    10 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
