crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__method_call-3.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
o.f(1,2,3)

# Func:
function <[[main]]>:
  frame_size: 8
  length: 31
  const (length=2):
    0: "f"
    1: "o"
  code:
     0 | load_global [1]
     2 | load_named [0]
     4 | store_reg r4
     6 | push_small_int value=1
    11 | store_reg r5
    13 | push_small_int value=2
    18 | store_reg r6
    20 | push_small_int value=3
    25 | store_reg r7
    27 | call r4, args=3
    30 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                             ●━━━━━━━━━━━━━━━━━━━━━━━●
r7 │                                 ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  
